--- a/client/src/App.css
+++ b/client/src/App.css
@@ -82,7 +82,7 @@ ul {
   cursor: pointer;
   transition: opacity 0.2s ease-in;
 
-  width:7.5rem;
+  width: 7.5rem;
   margin: 0.6rem;
   border: 1px solid black;
   padding: 0.6rem;
@@ -136,7 +136,7 @@ ul {
   opacity: 0.8;
 }
 
-.bg-light{
+.bg-light {
   border: #ccc solid 1px;
 }
 
@@ -177,17 +177,17 @@ ul {
   margin-right: 0.6rem;
 }
 
-.navbar-logout-button{
-  color:var(--light-color);
+.navbar-logout-button {
+  color: var(--light-color);
   background-color: var(--dark-color);
   font-size: 1rem;
   padding: 0 0.45rem;
   border: none;
   cursor: pointer;
-  margin: 0,0.25rem;
+  margin: 0, 0.25rem;
 }
 
-.navbar-logout-button:hover{
+.navbar-logout-button:hover {
   color: var(--primary-color);
 }
 
@@ -222,22 +222,22 @@ ul {
   justify-content: center;
 }
 
-.landing-buttons{
-  margin:1rem;
-  display:flex;
+.landing-buttons {
+  margin: 1rem;
+  display: flex;
 }
 
 /* --------------------------------------------------------- */
 /* For alert component <A class>  */
-.alert-container{
-  margin:4rem 1rem 1rem 1rem;
+.alert-container {
+  margin: 4rem 1rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   position: fixed;
   z-index: 1;
-  top:0.5rem;
-  right:0.5rem;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
 .alert {
@@ -259,7 +259,7 @@ ul {
 
 /* --------------------------------------------------------- */
 /* For auth pages <B container class>  */
-.auth-container{
+.auth-container {
   width: 90%;
   margin: 1rem;
   padding: 1rem;
@@ -268,15 +268,15 @@ ul {
   align-items: center;
 }
 
-.auth-header{
-  width:60%;
+.auth-header {
+  width: 60%;
   text-align: center;
 }
 
-.auth-form{
-  width:60%;
-  padding:5px;
-  margin:5px;
+.auth-form {
+  width: 60%;
+  padding: 5px;
+  margin: 5px;
   min-width: 400px;
   max-width: 550px;
 }
@@ -307,87 +307,98 @@ button {
   font: inherit;
 }
 
-.auth-button{
-  text-align: center
+.auth-button {
+  text-align: center;
 }
 
-.auth-notice{
-  text-align: center
+.auth-notice {
+  text-align: center;
 }
 
 /* <NEW> --------------------------------------------------------- */
 /* <B container class>  */
 /* <Share> for Portfolio & Transaction pages component */
-.record-container{
-  width:90%;
+.record-container {
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 }
 
-.record-header{
+.record-header {
   font-size: 2rem;
   color: #0077b5;
   margin: 0.5rem 0.5rem 1rem 0.5rem;
-  border-bottom: 1px solid
+  border-bottom: 1px solid;
 }
 
-.record-table{
-  margin:0.4rem;
+.record-table {
+  margin: 0.4rem;
   border-collapse: collapse;
-  width:98%;
+  width: 98%;
   font-size: 1rem;
 }
 
-.record-table th, td {
+.record-table th {
   border: 1px solid black;
   text-align: center;
-  padding:5px;
+  padding: 5px;
+  border-bottom: none;
+}
+
+.record-table tr {
+  border: none;
+}
+
+.record-table td {
+  border: 1px solid black;
+  text-align: center;
+  padding: 5px;
 }
 
 /* table font color */
-.green{
-  color:#28a745;
+.green {
+  color: #28a745;
 }
 
-.red{
-  color:#dc3545;
+.red {
+  color: #dc3545;
 }
-.grey{
-  color:grey
+.grey {
+  color: grey;
 }
 
 /* <NEW>--------------------------------------------------------- */
 /* for Portfolio page component <B container class>*/
-.stocks-container{
-  margin:2px;
-  padding:2px;
+.stocks-container {
+  margin: 2px;
+  padding: 2px;
   display: flex;
   flex-direction: column;
 }
 
-.total-container{
-  display:flex;
+.total-container {
+  display: flex;
   justify-content: flex-start;
-  align-items:center;
+  align-items: center;
   padding: 0.1rem;
 }
 
-.tran-sub-header{
+.tran-sub-header {
   font-size: 1.3rem;
   color: #0077b5;
   padding: 0.6rem;
 }
 
-.update-time{
+.update-time {
   font-size: 1rem;
   padding: 0.2rem 1rem;
-  color:black;
+  color: black;
 }
 
 /* refresh button */
-#refreshing-button{
-  font-family: "Source Sans Pro", "Arial", sans-serif;
+#refreshing-button {
+  font-family: 'Source Sans Pro', 'Arial', sans-serif;
   text-decoration: none;
   text-align: center;
   background-color: #2e2d2d;
@@ -401,9 +412,9 @@ button {
   opacity: 0.8;
 }
 
-#refreshing-button:hover{
+#refreshing-button:hover {
   color: white;
-  background-color: #008CBA;
+  background-color: #008cba;
 }
 
 /* refreshing spinner */
@@ -412,7 +423,7 @@ button {
 }
 
 #refreshing-spinner::after {
-  content: "";
+  content: '';
   width: 20px;
   height: 20px;
   border: 8px solid #f3f3f3;
@@ -420,12 +431,12 @@ button {
   border-radius: 100%;
   will-change: transform;
   animation: spin 1s infinite linear;
-  margin-left:0.5rem;
+  margin-left: 0.5rem;
 }
 
-#refresh-again-text{
+#refresh-again-text {
   font-size: 1rem;
-  margin-left:0.2rem;
+  margin-left: 0.2rem;
 }
 
 @keyframes spin {
@@ -439,13 +450,13 @@ button {
 
 /* <NEW>--------------------------------------------------------- */
 /* For NavSub component */
-.operations-nav-buttons{
+.operations-nav-buttons {
   display: flex;
   justify-content: flex-start;
 }
 
-.operation-nav-tag{
-  font-family: "Source Sans Pro", "Arial", sans-serif;
+.operation-nav-tag {
+  font-family: 'Source Sans Pro', 'Arial', sans-serif;
   text-decoration: none;
   text-align: center;
   opacity: 0.8;
@@ -453,43 +464,43 @@ button {
   color: white;
   border-radius: 20px;
 
-  margin:0.2rem 0.5rem;
-  padding:0.1rem;
+  margin: 0.2rem 0.5rem;
+  padding: 0.1rem;
   font-size: 1rem;
   width: 120px;
 }
 
-.operation-nav-tag:hover{
+.operation-nav-tag:hover {
   color: white;
-  background-color: #008CBA;
+  background-color: #008cba;
 }
 
-.buy-tag{
-  background-color:#4CAF50;
+.buy-tag {
+  background-color: #4caf50;
 }
 
-.sell-tag{
-  background-color:#f44336;
+.sell-tag {
+  background-color: #f44336;
 }
 
-.check-tag{
-  margin:0.1rem;
-  background-color:rgba(231, 12, 103, 0.719);
+.check-tag {
+  margin: 0.1rem;
+  background-color: rgba(231, 12, 103, 0.719);
 }
 
 /* <NEW>--------------------------------------------------------- */
 /* For operation component */
 /* Buy and sell operation */
-.operations-content{
-  margin-top:0.4rem;
+.operations-content {
+  margin-top: 0.4rem;
   padding: 2px;
   display: flex;
   justify-content: flex-start;
   flex-wrap: nowrap;
 }
 
-.oper-form-container{
-  width:30%;
+.oper-form-container {
+  width: 30%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -497,13 +508,12 @@ button {
   margin: 0.5rem 0.5rem;
 }
 
-.oper-form{
-  width:100%;
+.oper-form {
+  width: 100%;
 }
 
 .oper-form input[type='text'],
-.oper-form label
-.oper-form textarea {
+.oper-form label .oper-form textarea {
   display: block;
   width: 100%;
   padding: 0.1rem;
@@ -513,36 +523,36 @@ button {
   margin: 0.5rem 0.1rem;
 }
 
-.place-btn{
-  width:35%;
-  margin:1rem 0;
-  padding:0.3rem;
+.place-btn {
+  width: 35%;
+  margin: 1rem 0;
+  padding: 0.3rem;
   font-size: 1rem;
 }
 
 /* check-price button and spinner */
-.check-price-container{
+.check-price-container {
   margin: 0.6rem 0.7rem;
   display: flex;
   flex-direction: column;
 }
 
-.button-spinner-container{
+.button-spinner-container {
   display: flex;
   justify-content: flex-start;
 
-  margin:0.2rem 0.5rem;
+  margin: 0.2rem 0.5rem;
   font-size: 0.8rem;
 }
 
-#try-again-text{
-  margin:0.2rem 0.5rem;
-  padding:2px;
+#try-again-text {
+  margin: 0.2rem 0.5rem;
+  padding: 2px;
 }
 
-#empty-symbol-text{
-  margin:0.2rem 0.5rem;
-  padding:2px;
+#empty-symbol-text {
+  margin: 0.2rem 0.5rem;
+  padding: 2px;
 }
 
 /* check price spinner */
@@ -551,7 +561,7 @@ button {
 }
 
 #checking-spinner::after {
-  content: "";
+  content: '';
   width: 15px;
   height: 15px;
   border: 8px solid #f3f3f3;
@@ -559,14 +569,13 @@ button {
   border-radius: 100%;
   will-change: transform;
   animation: spin 1s infinite linear;
-  margin-left:1rem;
+  margin-left: 1rem;
 }
 
 /* check price data */
-.price-data-container{
-  margin:0.5rem 0.8rem;
+.price-data-container {
+  margin: 0.5rem 0.8rem;
 }
-
 
 /* <NEW>--------------------------------------------------------- */
 /* <NEW>--------------------------------------------------------- */
@@ -577,11 +586,11 @@ button {
     margin-top: 6.8rem;
   }
 
-  .alert-container{
-    top:3rem;
-    right:0.2rem;
+  .alert-container {
+    top: 3rem;
+    right: 0.2rem;
   }
-  
+
   .alert {
     padding: 0.2rem 0.5rem;
     margin: 0.2rem 0.2rem;
@@ -590,10 +599,10 @@ button {
   }
 
   .btn {
-    width:5rem;
+    width: 5rem;
     margin: 0.3rem;
     padding: 0.4rem;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   /* Text Styles */
@@ -629,34 +638,35 @@ button {
   }
 
   /* <Share> for Portfolio & Transaction pages component */
-  .record-header{
+  .record-header {
     font-size: 1.5rem;
     margin: 0.2rem;
   }
 
-  .record-table{
-    margin:0.2rem 0.2rem 0.5rem 0.2rem;
-    width:98%;
+  .record-table {
+    margin: 0.2rem 0.2rem 0.5rem 0.2rem;
+    width: 98%;
     font-size: 0.6rem;
   }
 
-  .record-table th, td {
-    padding:3px;
+  .record-table th,
+  td {
+    padding: 3px;
   }
 
   /* for Portfolio page component 450px  >*/
-  .tran-sub-header{
+  .tran-sub-header {
     font-size: 0.7rem;
     padding: 0.2rem;
   }
 
-  .update-time{
+  .update-time {
     font-size: 0.5rem;
     padding: 0.1rem 0.4rem;
-    color:black;
+    color: black;
   }
 
-  #refreshing-button{
+  #refreshing-button {
     width: 50px;
     margin: 0 5px 0 5px;
     padding: 3px 5px 2px 5px;
@@ -668,16 +678,16 @@ button {
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
-    margin-left:0.5rem;
+    margin-left: 0.5rem;
   }
 
-  #refresh-again-text{
+  #refresh-again-text {
     font-size: 0.6rem;
   }
 
   /* For NavSub component 450px  > */
-  .operation-nav-tag{
-    margin:0.1rem 0.4rem;
+  .operation-nav-tag {
+    margin: 0.1rem 0.4rem;
     font-size: 0.5rem;
     width: 55px;
   }
@@ -685,42 +695,41 @@ button {
   /* For operation component 450px > */
   /* Buy and sell operation */
 
-  .oper-form-container{
+  .oper-form-container {
     margin: 0.1rem 0.3rem;
   }
 
   .oper-form input[type='text'],
-  .oper-form label
-  .oper-form textarea {
+  .oper-form label .oper-form textarea {
     font-size: 0.6rem;
     margin: 0.2rem 0.1rem;
   }
 
-  .place-btn{
-    width:35%;
-    margin:0.5rem 0;
-    padding:0.1rem;
+  .place-btn {
+    width: 35%;
+    margin: 0.5rem 0;
+    padding: 0.1rem;
     font-size: 0.5rem;
   }
 
   /* check-price button and spinner */
-  .check-price-container{
+  .check-price-container {
     margin: 0.1rem 0.1rem;
   }
 
-  .button-spinner-container{
-    margin:0.1rem 0.2rem;
+  .button-spinner-container {
+    margin: 0.1rem 0.2rem;
     font-size: 0.2rem;
   }
-  
-  #try-again-text{
-    margin:0.1rem 0.5rem;
-    padding:1px;
+
+  #try-again-text {
+    margin: 0.1rem 0.5rem;
+    padding: 1px;
   }
-  
-  #empty-symbol-text{
-    margin:0.1rem 0.5rem;
-    padding:1px;
+
+  #empty-symbol-text {
+    margin: 0.1rem 0.5rem;
+    padding: 1px;
   }
 
   #checking-spinner::after {
@@ -728,11 +737,11 @@ button {
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
-    margin-left:0.5rem;
+    margin-left: 0.5rem;
   }
 
-  .price-data-container{
-    margin:0.1rem 0.6rem;
+  .price-data-container {
+    margin: 0.1rem 0.6rem;
     font-size: 0.4rem;
   }
 }
@@ -743,7 +752,7 @@ button {
 /* Mobile Styles < 450px > */
 
 @media (max-width: 450px) {
-  .hide-for-mobile{
+  .hide-for-mobile {
     display: none;
   }
 
@@ -754,12 +763,12 @@ button {
     margin-top: 7rem;
   }
 
-  .alert-container{
-    margin:8rem 0.2rem 0.5rem 0.5rem;
-    top:0.5rem;
-    right:0.3rem;
+  .alert-container {
+    margin: 8rem 0.2rem 0.5rem 0.5rem;
+    top: 0.5rem;
+    right: 0.3rem;
   }
-  
+
   .alert {
     min-width: 5rem;
     padding: 0.3rem 0.3rem;
@@ -769,10 +778,10 @@ button {
   }
 
   .btn {
-    width:5rem;
+    width: 5rem;
     margin: 0.3rem;
     padding: 0.4rem;
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
 
   /* Text Styles */
@@ -808,56 +817,57 @@ button {
   }
 
   /* --------------------------------------------------------- */
-/* For auth pages <B container class>  */
-.auth-header{
-  font-size: 2rem;
-}
+  /* For auth pages <B container class>  */
+  .auth-header {
+    font-size: 2rem;
+  }
 
-.auth-form{
-  min-width: 280px;
-}
+  .auth-form {
+    min-width: 280px;
+  }
 
-.auth-form-group {
-  margin: 2rem 0;
-}
+  .auth-form-group {
+    margin: 2rem 0;
+  }
 
-.auth-form-group input[type='submit'],
-button {
-  font: inherit;
-}
+  .auth-form-group input[type='submit'],
+  button {
+    font: inherit;
+  }
 
-.auth-button{
-  font-size: 1.2rem;
-}
+  .auth-button {
+    font-size: 1.2rem;
+  }
   /* <Share> for Portfolio & Transaction pages component */
-  .record-header{
+  .record-header {
     font-size: 1.2rem;
     margin: 0.2rem;
   }
 
-  .record-table{
-    margin:0.2rem 0.2rem 0.5rem 0.2rem;
-    width:98%;
+  .record-table {
+    margin: 0.2rem 0.2rem 0.5rem 0.2rem;
+    width: 98%;
     font-size: 0.6rem;
   }
 
-  .record-table th, td {
-    padding:3px;
+  .record-table th,
+  td {
+    padding: 3px;
   }
 
   /* for Portfolio page component < 450px  >*/
-  .tran-sub-header{
+  .tran-sub-header {
     font-size: 0.8rem;
     padding: 0.2rem;
   }
 
-  .update-time{
+  .update-time {
     font-size: 0.7rem;
     padding: 0.1rem 0.4rem;
-    color:black;
+    color: black;
   }
 
-  #refreshing-button{
+  #refreshing-button {
     width: 50px;
     margin: 0 5px 0 5px;
     padding: 3px 5px 2px 5px;
@@ -869,71 +879,70 @@ button {
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
-    margin-left:0.3rem;
+    margin-left: 0.3rem;
   }
 
-  #refresh-again-text{
+  #refresh-again-text {
     font-size: 0.5rem;
   }
 
   /* For NavSub component < 450px  > */
-  .operations-nav-buttons{
+  .operations-nav-buttons {
     display: flex;
     justify-content: space-between;
   }
-  .operation-nav-tag{
-    margin:0.1rem 0.4rem;
+  .operation-nav-tag {
+    margin: 0.1rem 0.4rem;
     font-size: 0.8rem;
-    width:30%;
+    width: 30%;
   }
 
   /* For operation component < 450px > */
   /* Buy and sell operation */
-  .operations-content{
-    margin-top:0.8rem;
+  .operations-content {
+    margin-top: 0.8rem;
   }
 
-  .oper-form-container{
-    width:45%;
+  .oper-form-container {
+    width: 45%;
     margin: 0.1rem 0.3rem;
   }
 
   .oper-form input[type='text'],
-  .oper-form label
-  .oper-form textarea {
+  .oper-form label .oper-form textarea {
     font-size: 1.5rem;
     margin: 0.4rem 0.1rem;
   }
 
-  .place-btn{
-    width:100%;
-    margin:1rem 0;
-    padding:0.1rem;
+  .place-btn {
+    width: 100%;
+    margin: 1rem 0;
+    padding: 0.1rem;
     font-size: 1.1rem;
   }
 
   /* check-price button and spinner */
-  .check-price-container{
+  .check-price-container {
     margin: 0.1rem 0.1rem;
   }
 
-  .button-spinner-container{
-    margin:0.1rem 0.2rem;
+  .button-spinner-container {
+    margin: 0.1rem 0.2rem;
     font-size: 0.2rem;
   }
 
-  #check-price-button{
-    width:100px;
+  #check-price-button {
+    width: 100px;
   }
-  
-  #try-again-text{
-    margin:0.1rem 0.5rem;
-    padding:1px;
+
+  #try-again-text {
+    margin: 0.1rem 0.5rem;
+    padding: 1px;
   }
-  
-  #empty-symbol-text{
-    margin:0.1rem 0.5rem;
-    padding:1px;
+
+  #empty-symbol-text {
+    margin: 0.1rem 0.5rem;
+    padding: 1px;
   }
 
   #checking-spinner::after {
@@ -941,12 +950,11 @@ button {
     height: 12px;
     border: 4px solid #f3f3f3;
     border-top: 4px solid #f25a41;
-    margin-left:0.5rem;
+    margin-left: 0.5rem;
   }
 
-  .price-data-container{
-    margin:0.3rem 1rem;
+  .price-data-container {
+    margin: 0.3rem 1rem;
     font-size: 0.75rem;
   }
 }
-
